@@ -5,20 +5,23 @@
  * Licensed under the Camunda License 1.0. You may not use this file
  * except in compliance with the Camunda License 1.0.
  */
-package io.camunda.optimize.service.db.es.report.interpreter.groupby.process.date;
+package io.camunda.optimize.service.db.os.report.interpreter.groupby.process.date;
 
-import static io.camunda.optimize.service.db.es.report.command.util.FilterLimitedAggregationUtilES.unwrapFilterLimitedAggregations;
-import static org.elasticsearch.index.query.QueryBuilders.existsQuery;
+import static io.camunda.optimize.service.db.os.externalcode.client.dsl.AggregationDSL.withSubaggregations;
+import static io.camunda.optimize.service.db.os.externalcode.client.dsl.QueryDSL.and;
+import static io.camunda.optimize.service.db.os.externalcode.client.dsl.QueryDSL.exists;
+import static io.camunda.optimize.service.db.os.report.interpreter.util.FilterLimitedAggregationUtilOS.unwrapFilterLimitedAggregations;
 
 import io.camunda.optimize.dto.optimize.query.report.single.configuration.DistributedByType;
 import io.camunda.optimize.dto.optimize.query.report.single.group.AggregateByDateUnit;
 import io.camunda.optimize.dto.optimize.query.report.single.process.ProcessReportDataDto;
 import io.camunda.optimize.dto.optimize.query.report.single.process.group.value.DateGroupByValueDto;
-import io.camunda.optimize.service.db.es.filter.ProcessQueryFilterEnhancerES;
-import io.camunda.optimize.service.db.es.report.context.DateAggregationContextES;
-import io.camunda.optimize.service.db.es.report.interpreter.groupby.process.AbstractProcessGroupByInterpreterES;
-import io.camunda.optimize.service.db.es.report.service.DateAggregationServiceES;
-import io.camunda.optimize.service.db.es.report.service.MinMaxStatsServiceES;
+import io.camunda.optimize.service.db.os.report.context.DateAggregationContextOS;
+import io.camunda.optimize.service.db.os.report.filter.ProcessQueryFilterEnhancerOS;
+import io.camunda.optimize.service.db.os.report.interpreter.RawResult;
+import io.camunda.optimize.service.db.os.report.interpreter.groupby.process.AbstractProcessGroupByInterpreterOS;
+import io.camunda.optimize.service.db.os.report.service.DateAggregationServiceOS;
+import io.camunda.optimize.service.db.os.report.service.MinMaxStatsServiceOS;
 import io.camunda.optimize.service.db.report.ExecutionContext;
 import io.camunda.optimize.service.db.report.MinMaxStatDto;
 import io.camunda.optimize.service.db.report.groupby.ProcessGroupByProcessInstanceDateInterpreter;
@@ -30,32 +33,31 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.elasticsearch.action.search.SearchRequest;
-import org.elasticsearch.action.search.SearchResponse;
-import org.elasticsearch.index.query.BoolQueryBuilder;
-import org.elasticsearch.index.query.QueryBuilder;
-import org.elasticsearch.search.aggregations.AggregationBuilder;
-import org.elasticsearch.search.aggregations.Aggregations;
-import org.elasticsearch.search.builder.SearchSourceBuilder;
+import org.apache.commons.lang3.tuple.Pair;
+import org.camunda.optimize.util.types.MapUtil;
+import org.opensearch.client.opensearch._types.aggregations.Aggregate;
+import org.opensearch.client.opensearch._types.aggregations.Aggregation;
+import org.opensearch.client.opensearch._types.query_dsl.Query;
+import org.opensearch.client.opensearch.core.SearchRequest;
+import org.opensearch.client.opensearch.core.SearchResponse;
 
 @RequiredArgsConstructor
-public abstract class AbstractProcessGroupByProcessInstanceDateInterpreterES
-    extends AbstractProcessGroupByInterpreterES {
+public abstract class AbstractProcessGroupByProcessInstanceDateInterpreterOS
+    extends AbstractProcessGroupByInterpreterOS {
 
   protected abstract ConfigurationService getConfigurationService();
 
-  protected abstract DateAggregationServiceES getDateAggregationService();
+  protected abstract DateAggregationServiceOS getDateAggregationService();
 
-  protected abstract MinMaxStatsServiceES getMinMaxStatsService();
+  protected abstract MinMaxStatsServiceOS getMinMaxStatsService();
 
-  protected abstract ProcessQueryFilterEnhancerES getQueryFilterEnhancer();
+  protected abstract ProcessQueryFilterEnhancerOS getQueryFilterEnhancer();
 
   @Override
   public Optional<MinMaxStatDto> getMinMaxStats(
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context,
-      final BoolQueryBuilder baseQuery) {
+      final Query baseQuery) {
     if (context.getReportData().getGroupBy().getValue()
         instanceof final DateGroupByValueDto groupByDate) {
       if (AggregateByDateUnit.AUTOMATIC.equals(groupByDate.getUnit())) {
@@ -67,38 +69,36 @@ public abstract class AbstractProcessGroupByProcessInstanceDateInterpreterES
 
   @Override
   public void adjustSearchRequest(
-      final SearchRequest searchRequest,
-      final BoolQueryBuilder baseQuery,
+      final SearchRequest.Builder searchRequestBuilder,
+      final Query baseQuery,
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context) {
-    super.adjustSearchRequest(searchRequest, baseQuery, context);
-    baseQuery.must(existsQuery(getDateField()));
+    super.adjustSearchRequest(searchRequestBuilder, baseQuery, context);
+    searchRequestBuilder.query(and(baseQuery, exists(getDateField())));
   }
 
   public abstract String getDateField();
 
   @Override
-  public List<AggregationBuilder> createAggregation(
-      final SearchSourceBuilder searchSourceBuilder,
+  public Map<String, Aggregation> createAggregation(
+      final Query query,
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context) {
     final AggregateByDateUnit unit = getGroupByDateUnit(context.getReportData());
-    return createAggregation(searchSourceBuilder, context, unit);
+    return createAggregation(query, context, unit);
   }
 
-  public List<AggregationBuilder> createAggregation(
-      final SearchSourceBuilder searchSourceBuilder,
+  public Map<String, Aggregation> createAggregation(
+      final Query query,
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context,
       final AggregateByDateUnit unit) {
-    final MinMaxStatDto stats = getMinMaxDateStats(context, searchSourceBuilder.query());
+    final MinMaxStatDto stats = getMinMaxDateStats(context, query);
 
-    final DateAggregationContextES dateAggContext =
-        DateAggregationContextES.builder()
+    final DateAggregationContextOS dateAggContext =
+        DateAggregationContextOS.builder()
             .aggregateByDateUnit(unit)
             .dateField(getDateField())
             .minMaxStats(stats)
             .timezone(context.getTimezone())
-            .subAggregations(
-                getDistributedByInterpreter()
-                    .createAggregations(context, searchSourceBuilder.query()))
+            .subAggregations(getDistributedByInterpreter().createAggregations(context, query))
             .processGroupByType(context.getReportData().getGroupBy().getType())
             .processFilters(context.getReportData().getFilter())
             .processQueryFilterEnhancer(getQueryFilterEnhancer())
@@ -107,14 +107,14 @@ public abstract class AbstractProcessGroupByProcessInstanceDateInterpreterES
 
     return getDateAggregationService()
         .createProcessInstanceDateAggregation(dateAggContext)
-        .map(agg -> addSiblingAggregationIfRequired(context, searchSourceBuilder.query(), agg))
-        .map(Collections::singletonList)
-        .orElse(Collections.emptyList());
+        .map(agg -> addSiblingAggregationIfRequired(context, query, agg))
+        .map(MapUtil::createFromPair)
+        .orElse(Map.of());
   }
 
   private MinMaxStatDto getMinMaxDateStats(
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context,
-      final QueryBuilder baseQuery) {
+      final Query baseQuery) {
     return getMinMaxStatsService()
         .getMinMaxDateRange(context, baseQuery, getIndexNames(context), getDateField());
   }
@@ -122,44 +122,43 @@ public abstract class AbstractProcessGroupByProcessInstanceDateInterpreterES
   @Override
   public void addQueryResult(
       final CompositeCommandResult result,
-      final SearchResponse response,
+      final SearchResponse<RawResult> response,
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context) {
     ProcessGroupByProcessInstanceDateInterpreter.addQueryResult(
-        processAggregations(response, response.getAggregations(), context),
+        processAggregations(response, response.aggregations(), context),
         getDistributedByInterpreter().isKeyOfNumericType(context),
         result,
         context);
   }
 
   private List<GroupByResult> processAggregations(
-      final SearchResponse response,
-      final Aggregations aggregations,
+      final SearchResponse<RawResult> response,
+      final Map<String, Aggregate> aggregations,
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context) {
     if (aggregations == null) {
       // aggregations are null when there are no instances in the report
       return Collections.emptyList();
     }
 
-    final Optional<Aggregations> unwrappedLimitedAggregations =
-        unwrapFilterLimitedAggregations(aggregations);
-    if (unwrappedLimitedAggregations.isPresent()) {
-      Map<String, Aggregations> keyToAggregationMap =
-          getDateAggregationService()
-              .mapDateAggregationsToKeyAggregationMap(
-                  unwrappedLimitedAggregations.get(), context.getTimezone());
-      // enrich context with complete set of distributed by keys
-      getDistributedByInterpreter()
-          .enrichContextWithAllExpectedDistributedByKeys(
-              context, unwrappedLimitedAggregations.get());
-      return mapKeyToAggMapToGroupByResults(keyToAggregationMap, response, context);
-    } else {
-      return Collections.emptyList();
-    }
+    return unwrapFilterLimitedAggregations(aggregations)
+        .map(
+            unwrappedLimitedAggregations -> {
+              Map<String, Map<String, Aggregate>> keyToAggregationMap =
+                  getDateAggregationService()
+                      .mapDateAggregationsToKeyAggregationMap(
+                          unwrappedLimitedAggregations, context.getTimezone());
+              // enrich context with complete set of distributed by keys
+              getDistributedByInterpreter()
+                  .enrichContextWithAllExpectedDistributedByKeys(
+                      context, unwrappedLimitedAggregations);
+              return mapKeyToAggMapToGroupByResults(keyToAggregationMap, response, context);
+            })
+        .orElse(Collections.emptyList());
   }
 
   private List<GroupByResult> mapKeyToAggMapToGroupByResults(
-      final Map<String, Aggregations> keyToAggregationMap,
-      final SearchResponse response,
+      final Map<String, Map<String, Aggregate>> keyToAggregationMap,
+      final SearchResponse<RawResult> response,
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context) {
     return keyToAggregationMap.entrySet().stream()
         .map(
@@ -168,7 +167,7 @@ public abstract class AbstractProcessGroupByProcessInstanceDateInterpreterES
                     stringBucketEntry.getKey(),
                     getDistributedByInterpreter()
                         .retrieveResult(response, stringBucketEntry.getValue(), context)))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private AggregateByDateUnit getGroupByDateUnit(final ProcessReportDataDto processReportData) {
@@ -179,17 +178,20 @@ public abstract class AbstractProcessGroupByProcessInstanceDateInterpreterES
     return processReportDataDto.getDistributedBy().getType();
   }
 
-  private AggregationBuilder addSiblingAggregationIfRequired(
+  private Pair<String, Aggregation> addSiblingAggregationIfRequired(
       final ExecutionContext<ProcessReportDataDto, ProcessExecutionPlan> context,
-      final QueryBuilder baseQueryBuilder,
-      final AggregationBuilder aggregationBuilder) {
+      final Query baseQuery,
+      final Pair<String, Aggregation> aggregation) {
     // add sibling distributedBy aggregation to enrich context with all distributed by keys,
     // required for variable distribution
     if (DistributedByType.VARIABLE.equals(getDistributedByType(context.getReportData()))) {
-      getDistributedByInterpreter()
-          .createAggregations(context, baseQueryBuilder)
-          .forEach(aggregationBuilder::subAggregation);
+      Map<String, Aggregation> subAggregations =
+          MapUtil.combineUniqueMaps(
+              aggregation.getValue().aggregations(),
+              getDistributedByInterpreter().createAggregations(context, baseQuery));
+      return Pair.of(
+          aggregation.getKey(), withSubaggregations(aggregation.getValue(), subAggregations));
     }
-    return aggregationBuilder;
+    return aggregation;
   }
 }
